Modify index.html for auto redirection to Transitron
Updated the HTML structure for redirection.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blink App</title>
-    <!-- CRITICAL: DO NOT REMOVE/MODIFY THIS COMMENT OR THE SCRIPT BELOW -->
-    <script src="https://blink.new/auto-engineer.js?projectId=roadeye-civic-platform-2ar2gfeo" type="module"></script>
+    <title>Redirecting...</title>
+
+    <!-- Auto redirect -->
+    <meta http-equiv="refresh" content="0; url=https://transitron.lovable.app/" />
+
+    <!-- Fallback -->
+    <script>
+      window.location.href = "https://transitron.lovable.app/";
+    </script>
   </head>
+
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <p>Redirecting to Transitron…</p>
   </body>
-</html> 
+</html>
